--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "scipy>=1.0.0",
     "trimesh>=4.0.0",
     "lap>=0.4.0",
+    "scikit-learn>=1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -25,4 +26,6 @@ dev = [
     "flake8>=7.0.0",
 ]
 
+[tool.setuptools]
+packages = ["softmap"]
 
