--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "soft-map-generation"
+name = "softmap"
 version = "0.1.0"
 description = "Align shapes based on Auto3dgm and generates soft maps from that"
 readme = "README.md"
